# embedded-cli-rs

examples/ch32v203/: Cargo.toml  README.md  memory.x
examples/ch32v203/.cargo/: config.toml
examples/ch32v203/src/: main.rs
examples/esp32/: Cargo.toml  README.md
examples/esp32/.cargo/: config.toml
examples/esp32/src/: main.rs
