[package]
name = "ch32-cli"
version = "0.1.0"
authors = ["edy555 <edy555@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "ch32-cli"
test = false
bench = false

[dependencies]
embedded-cli = { path = "../../embedded-cli", features = ["macros", "autocomplete"] }

ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal", features = [
    "ch32v203k8t6",
    "embassy",
#    "rt",
#    "time-driver-tim2",
], default-features = false }
embassy-executor = { version = "0.6.0", features = [
#    "nightly",
#    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
] }
#embassy-time = { version = "0.3.0" }
#embassy-usb = { version = "0.3.0" }
#embassy-futures = { version = "0.1.0" }

qingke-rt = "0.2.1"
qingke = "0.2.0"

critical-section = "1.1.2"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
fugit = "0.3.7"
nb = "1.1"
panic-halt= "0.2.0"
#usbd-serial = "0.2.1"
embedded-io = "0.6.1"
ufmt = "0.2.0"

#display-interface-spi = "0.5.0"
#embedded-hal = "1.0.0"
#embedded-graphics = "0.8.1"
#ssd1306 = "0.8.4"
#heapless = "0.8.0"
#micromath = { version = "2.1.0", features = ["num-traits"] }

# mipidsi = "0.7.1"
# embedded-hal-bus = "0.1.0"

[profile.release]
codegen-units = 1 # better optimizations
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
